--- a/src/App.css
+++ b/src/App.css
@@ -1,47 +1,118 @@
-@import url('https://fonts.googleapis.com/css2?family=Righteous&family=Lato:wght@400;700&family=Akaya+Kanadaka&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Righteous&family=Lato:wght@400;500&family=Akaya+Kanadaka&display=swap');
+@import './animations.css';
+@import './text.css';
 * {
     margin: 0px;
     padding: 0px;
+    font-size: 17px;
     color: #FFFFFF;
 }
-h1 {
-    font-family: 'Righteous', cursive;
-    font-size: 30px;
+form {
+    text-align: center;
 }
-h2 , .homeBtn{
-    font-family: 'Righteous', cursive;
-    font-size: 60px;
-    border: none;
+form h1 {
+    margin-bottom:30px ;
+}
+form button {
     background-color: transparent;
-}
-.homeBtn:hover {
-    transition: .2s;
-    scale: 1.05;
-}
-h3 {
     color: #FFCA7B;
     font-family: 'Akaya Kanadaka', cursive;
+    border: none;
+    outline: none;
+    margin-top: 15px;
+    font-size: 25px;
 }
-p {
-    font-family: 'Lato', sans-serif;
+input , textarea {
+    box-sizing: border-box;
+    padding: 9px;
+    margin-top: 15px;
+    border: 1px solid #FFFFFF;
+    border-radius: 5px;
+    background-color: transparent;
+    width: 100%;
+    outline: none;
 }
+input {
+    height: 40px;
+}
+textarea {
+    height: 220px;
+}
+#navigationMenu {
+    position: absolute;
+    box-sizing: border-box;
+    padding-left:0px ;
+    top: 80%;
+    left: 50%;
+    transform: translate(-50%);
+    justify-content: center;
+    align-items: center;
+}
+#circle {
+    border: 1px solid #FFCA7B;
+    border-radius: 50%;
+    width: 35px;
+    height: 35px;
+}
+#top {
+    top: -30px;
+    left: -30px;
+    text-align: center;
 
-#container ,#projectContainer{
+}
+#right {
+    top: 7px;
+    left: 50px;
+    text-align: left;
+}
+#bottom {
+    top: 50px;
+    left:-30px;
+
+    text-align: center;
+}
+#left {
+    bottom: 10px;
+    right: 50px;
+    text-align: right;
+}
+#container{
     width: 100%;
     height: 100vh;
+    box-sizing: border-box;
+    padding: 20px;
+    padding-top: 100px;
+    
     background-color: #222222;
 }
-#navegationSwipe {
+
+#loadingScreen {
     width: 100%;
     height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    z-index: 9999; 
+    animation: loading .4s ease-out;
     position: absolute;
-    top: 0px;
-    background-color: transparent;
-}
-#projectContainer {
+    top: 0;
+    left: 0;  
+    background-color: #FFCA7B;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     overflow: hidden;
 }
+  
+  #reflex {
+    width: 100%;
+    height: 50px;
+    border-radius: 50%;
+    position: absolute;
+    animation: moveReflect .4s ease-in-out infinite;
+    pointer-events: none; 
+    opacity: 0.7; 
+    background: linear-gradient(135deg, rgba(255, 255, 255, 0.7) 0%, rgba(255, 255, 255, 0.7) 100%);
+
+    box-shadow: -22px 13px 120px 150px rgba(255, 255, 255, 0.6);
+
+  }
+
