--- a/src/text.css
+++ b/src/text.css
@@ -7,15 +7,31 @@ h1 {
     font-family: 'Righteous', cursive;
     font-size: 30px;
 }
+#languageContainer {
+    margin-top: 80px;
+    display: flex;
+}
+#languageContainer h3 {
+    font-size: 30px;
+    margin-right: 15px;
+    color: rgb(255, 255, 255,.8);
+}
+#languageContainer .active {
+    color: #FFCA7B
+}
 h2 , .homeBtn{
     font-family: 'Righteous', cursive;
     font-size: 60px;
     border: none;
     background-color: transparent;
+    color: rgb(255, 255, 255,.8);
+    transition: .2s;
+    stroke: 1px solid rgb(255, 255, 255,.8) ;
 }
 h3 {
     margin-top: 15px;
     color: #FFCA7B;
+    font-size: 20px;
     font-family: 'Akaya Kanadaka', cursive;
 }
 p {
@@ -31,7 +47,7 @@ p {
     background: linear-gradient(to right, #FFCA7B 0%, #FFCA7B 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    animation: textReflex .15s  linear;
+    animation: textReflex .3s  ease-in;
 }
 #navigationMenu h4 {
     width: 100px;
