--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,9 @@
     font-size: 17px;
     color: #FFFFFF;
 }
+strong {
+    color: #FFCA7B;
+}
 form {
     text-align: center;
 }
@@ -29,8 +32,9 @@ input , textarea {
     border: 1px solid #FFFFFF;
     border-radius: 5px;
     background-color: transparent;
-    width: 100%;
+    width: 95%;
     outline: none;
+    box-shadow: 0px 0px 5px 0px rgba(255,255,255,.4);
 }
 input {
     height: 40px;
@@ -42,7 +46,7 @@ textarea {
     position: absolute;
     box-sizing: border-box;
     padding-left:0px ;
-    top: 80%;
+    top: 87%;
     left: 50%;
     transform: translate(-50%);
     justify-content: center;
@@ -76,14 +80,14 @@ textarea {
     right: 50px;
     text-align: right;
 }
-#container{
+#container , #projectContainer{
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
+    height: fit-content;
     box-sizing: border-box;
     padding: 20px;
     padding-top: 100px;
-    
-    background-color: #222222;
+    background: linear-gradient(to right, #323232 0%, #1B1B1B 100%)
 }
 
 #loadingScreen {
@@ -116,3 +120,22 @@ textarea {
 
   }
 
+  #homeContainer {
+    display: flex;
+    flex-wrap: wrap;
+    height: fit-content;
+    max-width: 500px;
+  }
+
+  @media (min-width: 768px) {
+    
+    #projectContainer {
+      
+        padding: 0px;
+        padding-top:0px ;
+    }
+    form {
+        margin: auto;
+        width: 70%;
+    }
+  }
