--- a/src/components/project.module.css
+++ b/src/components/project.module.css
@@ -10,16 +10,129 @@
     padding-top: 100px;
     overflow: hidden;
 }
+.infoContainer {
+    width: 100%;
+    display: flex;
+    flex-wrap: nowrap;
+}
+.tecContainer {
+    width: 30px;
+    white-space: wrap;
+    height: fit-content;
+    margin: 0px;
+    margin-top: 10px;
+    text-align: right;
+    
+}
+.tecContainer * {
+    width: 25px;
+    height: fit-content;
+    padding: 0px;
+    margin-right: 0px;
+    margin-bottom: 15px;
+}
 .projectInfo li {
     box-sizing: border-box;
     padding-top: 15px;
     border-top:1px solid #FFFFFF ;
     margin-top: 15px;
     display: flex;
+    flex-wrap: wrap;
+}
+.img {
+    margin-top: 25px;
+    width: 100%;
+}
+.projectContainer {
+    width: 100%;
+}
+.linkContainer {
+    box-sizing: border-box;
+    padding-left: 10%;
+    padding-right: 10%;
+    display: flex;
+}
+.projectInfo a {
+    width: 100%;
+    text-decoration: none;
+    margin: auto;
+    text-align: center;
+    width: 200px;
+    margin-top: 15px;
+    font-size: 18px;
+    font-family: 'Righteous', cursive;
+    color: #FFCA7B;
+}
+.projectInfo li div {
+    width: 100%;
 }
 .caracteristicImg {
-    margin-right: 15px;
-    width: 142px;
-    height: 164px;
+    background-size: cover;
+    object-fit: cover;
+    background-size: contain;
+    background-position: center center;
+    margin-top: 15px;
+    width: 100%;
+    height: 150px;
     border-radius: 5px;
 }
+.modal {
+    display: block;
+    position: fixed;
+    top: 20%;
+    width: 90%;
+    height: fit-content;
+    max-height: 500px;
+    background: transparent; 
+}
+.modal img {
+    width: 100%;
+    height: 100%;
+    margin: auto;
+    object-fit: contain;
+    background-size: contain;
+    background-position: center center;
+}
+.modal button {
+    z-index: 1;
+    position: relative;
+    left: 92.5%;
+    top:35px;
+    background-color: transparent;
+    border: none;
+    outline: none;
+}
+@media (min-width: 768px) {
+    
+    .projectTitleContainer , .projectInfo  {
+        margin: 0px;
+        box-sizing: border-box;
+        padding: 15%;
+        padding-top: 200px;
+
+    }
+    .projectTitleContainer h2 {
+        width: 500px;
+    }
+    .infoContainer {
+        margin-top: 20px;
+        width: 80%;
+    }
+    .projectInfo {
+        display: flex;
+        flex-wrap: nowrap;
+    }
+    .linkContainer {
+        width: 80%;
+    }
+    .img {
+        width: 80%;
+        height: 250px;
+    }
+    .projectInfo ul {
+        width: 80%;
+    }
+    .tecContainer {
+        margin-left: 20px;
+    }
+  }
