--- a/src/components/project.module.css
+++ b/src/components/project.module.css
@@ -1,3 +1,5 @@
+@import url('../animations.css');
+
 .projectTitleContainer {
     padding: 0px;
     margin-top: -100px;
@@ -10,8 +12,27 @@
     padding-top: 100px;
     overflow: hidden;
 }
-.infoContainer {
+.projectTitleContainer h2 {
+    position: absolute;
+    top: 20;
+    left: 30;
+    z-index: 99999;
+    margin-top: 100px;
+    font-size: 55px;
+   
+}
+.projectTitleContainer img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 0;
     width: 100%;
+    height: 100vh;
+    display: none;
+}
+.infoContainer {
+    width:100%;
+    height:180px ;
     display: flex;
     flex-wrap: nowrap;
 }
@@ -25,11 +46,10 @@
     
 }
 .tecContainer * {
-    width: 25px;
     height: fit-content;
     padding: 0px;
     margin-right: 0px;
-    margin-bottom: 15px;
+    margin-bottom: 25px;
 }
 .projectInfo li {
     box-sizing: border-box;
@@ -39,9 +59,19 @@
     display: flex;
     flex-wrap: wrap;
 }
-.img {
-    margin-top: 25px;
+.carousel {
     width: 100%;
+    height: 250px;
+    margin-top: 30px;
+}
+.carousel img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    border-radius: 5px;
 }
 .projectContainer {
     width: 100%;
@@ -73,7 +103,7 @@
     background-position: center center;
     margin-top: 15px;
     width: 100%;
-    height: 150px;
+    height: 200px;
     border-radius: 5px;
 }
 .modal {
@@ -111,28 +141,69 @@
         padding-top: 200px;
 
     }
+    .projectTitleContainer img {
+        display: block;
+        position: static;
+        margin-top: 40px;
+        width: 100%;
+        height: 90%;
+        object-fit: cover;
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+        
+    }
     .projectTitleContainer h2 {
+        margin: 0;
+        position: static;
         width: 500px;
+        font-size: 65px;
+    }
+    .projectTitleContainer h2:hover {
+        transition: 0.2s;
+        transform: scale(1.05) translate(12px);
+        -webkit-background-clip: text;
+        animation: textReflexOnWhite .3s  ease-in;
     }
     .infoContainer {
         margin-top: 20px;
-        width: 80%;
+        width: 90%;
     }
     .projectInfo {
         display: flex;
         flex-wrap: nowrap;
     }
     .linkContainer {
-        width: 80%;
+        width: 90%;
     }
-    .img {
-        width: 80%;
+    .carousel {
+        width: 89%;
         height: 250px;
+        margin-top: 30px;
+    }
+    .carousel img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        border-radius: 5px;
     }
     .projectInfo ul {
-        width: 80%;
+        width: 70%;
     }
     .tecContainer {
         margin-left: 20px;
     }
-  }
+}
+@media screen and (max-width: 1360px) and (max-height: 720px) {
+    .projectInfo {
+        padding: 100px;
+    }   
+    .projectTitleContainer {
+        padding: 100px;
+        padding-top: 200px;
+    }
+}
