--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
 @import './animations.css';
 @import './text.css';
 * {
+    user-select: none;
     margin: 0px;
     padding: 0px;
     font-size: 17px;
@@ -23,11 +24,21 @@ form button {
     border: none;
     outline: none;
     margin-top: 15px;
-    font-size: 25px;
+    font-size: 30px;
+    transition: .2s;
+}
+form button:hover {
+    scale: 1.1;
+    text-shadow: 1px 1px 10px #FFCA7B; 
+}
+form button:active {
+    color: #FFFFFF;
 }
 input , textarea {
+    font-size: 19px;
     box-sizing: border-box;
     padding: 9px;
+    padding-bottom: 12px;
     margin-top: 15px;
     border: 1px solid #FFFFFF;
     border-radius: 5px;
@@ -41,25 +52,44 @@ input {
 }
 textarea {
     height: 220px;
+    font-size: 18px;
+}
+svg {
+    transition: .3s;
+}
+svg:hover {
+scale: 1.2;
+}
+.homeNavigationMenu * {
+    animation: menuItems 1.5s infinite;
 }
 #navigationMenu {
     position: absolute;
     box-sizing: border-box;
     padding-left:0px ;
-    top: 87%;
+    top: 7%;
     left: 50%;
     transform: translate(-50%);
     justify-content: center;
     align-items: center;
+   
+} 
+#navigationMenu *{ 
+    transition: .2s;
+}
+#navigationMenu :hover {
+    transform: scale(1.1);
 }
 #circle {
     border: 1px solid #FFCA7B;
     border-radius: 50%;
     width: 35px;
     height: 35px;
+    box-shadow: 0 0 7px 0px #FFCA7B; 
+    animation: none;
 }
 #top {
-    top: -30px;
+    top: -40px;
     left: -30px;
     text-align: center;
 
@@ -72,7 +102,6 @@ textarea {
 #bottom {
     top: 50px;
     left:-30px;
-
     text-align: center;
 }
 #left {
@@ -124,11 +153,59 @@ textarea {
     display: flex;
     flex-wrap: wrap;
     height: fit-content;
-    max-width: 500px;
+    max-width: 400px;
+  }
+  #confirmationModal {
+    height: 200px;
+    width: 200px;
+    position: absolute;
+    top: 10;
+    left: 50%;
+    transform: translate(-50%);
   }
 
+
+
+/*----------------MODAL----------------*/
+.confirmationModalHidden {
+    visibility: hidden;
+  }
+  .confirmationModal , .confirmationModalOff {
+    box-sizing: border-box;
+    padding: 10px;
+    padding-top: 0px;
+    text-align: center;
+    position: absolute;
+    top: 7%;
+    left: 50%;
+    transform: translate(-50%);
+    width: 90%;
+    height: fit-content;
+    border-radius: 5px;
+    border: 1px solid #FFCA7B;
+    animation: enter .4s ease-out ;
+    background: linear-gradient(to right, #323232 0%, #1B1B1B 100%);
+    z-index: 9999999;
+  }
+  .confirmationModal h3 , .confirmationModalOff h3{
+    font-size: 22px;
+    margin-bottom: 5px;
+  }
+  .confirmationModal p , .confirmationModalOff p {
+    margin-top: 5px;
+    font-size: 20px;
+  }
+  .confirmationModalOff {
+    top: -15%;
+  animation: out .3s ;
+  }
+  
   @media (min-width: 768px) {
-    
+    #container {
+      
+        padding: 20%;
+        padding-top:200px ;
+    }
     #projectContainer {
       
         padding: 0px;
@@ -138,4 +215,22 @@ textarea {
         margin: auto;
         width: 70%;
     }
+    input {
+        margin-left: 20px;
+        margin-right: 100%;
+        min-width: 50%;
+        width: fit-content;
+    }
   }
+  
+  @media screen and (max-width: 1360px) and (max-height: 720px) {
+    
+    #projectContainer {
+        padding: 0px;
+        padding-top:0px ;
+    }
+    #container{
+        padding: 120px !important;
+
+    }
+}
