--- a/src/text.css
+++ b/src/text.css
@@ -6,6 +6,7 @@ h1 {
     margin-top: 0px;
     font-family: 'Righteous', cursive;
     font-size: 30px;
+    transition:.3s
 }
 #languageContainer {
     margin-top: 80px;
@@ -28,11 +29,19 @@ h2 , .homeBtn{
     transition: .2s;
     stroke: 1px solid rgb(255, 255, 255,.8) ;
 }
+.languageBtn,.active {
+    transition: .2s;
+}
+.languageBtn:hover ,.active:hover {
+    scale: 1.2;
+    transform: translate(2px);
+}
 h3 {
     margin-top: 15px;
     color: #FFCA7B;
     font-size: 20px;
     font-family: 'Akaya Kanadaka', cursive;
+    transition:.3s
 }
 p {
     margin: 0px;
@@ -43,11 +52,9 @@ p {
 
 .homeBtn:hover {
     transition: 0.2s;
-    transform: scale(1.05);
-    background: linear-gradient(to right, #FFCA7B 0%, #FFCA7B 100%);
+    transform: scale(1.05) translate(20px);
     -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    animation: textReflex .3s  ease-in;
+    animation: textReflexOnWhite .3s  ease-in;
 }
 #navigationMenu h4 {
     width: 100px;
@@ -56,7 +63,12 @@ p {
     position: absolute;
     font-family: 'Lato', sans-serif;
     font-size: 19px;
-    letter-spacing: 1px;
-    font-weight: 600;
-    text-align: center;
+    letter-spacing: 0px;
+    font-weight: 300;
 }
+@media (max-width: 400px) {
+    
+    .homeBtn {
+        font-size: 50px;
+    }
+  }
