--- a/src/components/project.module.css
+++ b/src/components/project.module.css
@@ -13,12 +13,17 @@
     overflow: hidden;
 }
 .projectTitleContainer h2 {
+    box-sizing: border-box;
     position: absolute;
     top: 20;
     left: 30;
     z-index: 99999;
     margin-top: 200px;
+    padding: 10px;
+    padding-left: 20px;
+    margin-left: -20px;
     font-size: 53px;
+    background-color: #FFCA7B;
    
 }
 .projectTitleContainer img {
@@ -28,7 +33,11 @@
     z-index: 0;
     width: 100%;
     height: 100vh;
-    display: none;
+    border-radius: 5px;
+    background-size: cover;
+    object-fit: cover;
+    background-size: contain;
+    background-position: center center;
 }
 .infoContainer {
     width:100%;
@@ -159,6 +168,7 @@
         position: static;
         width: 500px;
         font-size: 65px;
+        background-color: transparent;
     }
     .projectTitleContainer h2:hover {
         transition: 0.2s;
