--- a/src/text.css
+++ b/src/text.css
@@ -65,6 +65,7 @@ p {
     font-size: 19px;
     letter-spacing: 0px;
     font-weight: 300;
+    text-shadow: 2px 2px 4px rgb(64, 64, 64) ;
 }
 @media (max-width: 400px) {
     
