--- a/src/components/project.module.css
+++ b/src/components/project.module.css
@@ -34,9 +34,9 @@
     width: 100%;
     height: 100vh;
     border-radius: 5px;
+    border-radius: 0px;
     background-size: cover;
     object-fit: cover;
-    background-size: contain;
     background-position: center center;
 }
 .infoContainer {
