--- a/src/App.css
+++ b/src/App.css
@@ -163,7 +163,57 @@ scale: 1.2;
     transform: translate(-50%);
   }
 
-
+#slideAnimationDiv {
+    position: absolute;
+    top: 71%;
+    left: 65%;
+    transform:translate(-50%);
+}
+#slideAnimationDiv * {
+    position: relative;
+}
+#slideAnimationDiv div {
+    color: transparent;
+    display: block;
+    width: 10px;
+    height: 10px;
+    z-index: 1;
+    opacity: .7;
+    background-color: #FFFFFF;
+}
+#topLine {
+    top:20px;
+    left: 10px;
+    border-radius: 0px 5px 5px 0px;
+    transform: rotate(-90deg);
+    animation: slideMoveTop 1s infinite , slideGrow 1s infinite;
+}
+#rightLine {
+    border-radius: 0px 5px 5px 0px;
+     animation: slideGrow 1s infinite,slideMoveRight 1s infinite;
+    top: 34px;
+    left: 40px;
+}
+#bottomLine {
+     border-radius: 0px 5px 5px 0px;
+      animation: slideGrow 1s infinite,slideMoveBottom 1s infinite;
+    top: 10px;
+    left: 10px;
+    rotate: 90deg;
+}
+#leftLine {
+     border-radius: 5px 0px 0px 5px;
+      animation: slideGrow 1s infinite,slideMoveLeft 1s infinite;
+    top: -25px;
+    right: 20px;
+}
+#text {
+    width: 20px;
+    left: 20px;
+    position: relative;
+    opacity: 0;
+   /* animation: showText 1s infinite;*/
+}
 
 /*----------------MODAL----------------*/
 .confirmationModalHidden {
