--- a/src/components/project.module.css
+++ b/src/components/project.module.css
@@ -209,7 +209,7 @@
         margin-left: 20px;
     }
 }
-@media screen and (max-width: 1360px) and (max-height: 720px) {
+@media screen and (min-width: 1024px) and (max-width: 1360px) and (max-height: 720px) {
     .projectInfo {
         padding: 100px;
     }   
