--- a/src/App.css
+++ b/src/App.css
@@ -178,12 +178,12 @@ scale: 1.2;
     width: 10px;
     height: 15px;
     z-index: 1;
-    opacity: 1;
+    opacity: .7;
     text-align: center;
     background-color: #FFFFFF;
     font-weight: 800;
     font-size: 12px;
-    box-shadow: 0px 0px 4px #FFFFFF;
+    box-shadow: 0px 0px 4px #d4d0d0;
     border-radius: 20px;
 }
 #topLine {
