--- a/src/animations.css
+++ b/src/animations.css
@@ -165,9 +165,9 @@
     color: transparent;
   }
   50% {
-    color: rgb(60, 60, 60);
+    color: #242424;
     width: 70px;
-    opacity: 1;
+    opacity: .8;
   }
   100% {
     width:0px;
