--- a/src/components/project.module.css
+++ b/src/components/project.module.css
@@ -142,6 +142,10 @@
     border: none;
     outline: none;
 }
+.descriptionTitle {
+    letter-spacing: 1px;
+    font-weight: 800;
+}
 @media (min-width: 768px) {
     
     .projectTitleContainer , .projectInfo  {
@@ -157,6 +161,7 @@
         margin-top: 40px;
         width: 100%;
         height: 90%;
+        border-radius: 5px;
         object-fit: cover;
         background-size: cover;
         background-position: center;
@@ -189,9 +194,10 @@
         width: 90%;
     }
     .carousel {
-        width: 89%;
+        width: 90%;
         height: 250px;
         margin-top: 30px;
+        overflow: hidden;
     }
     .carousel img {
         width: 100%;
