--- a/src/components/project.module.css
+++ b/src/components/project.module.css
@@ -1,4 +1,4 @@
-@import url('../animations.css');
+@import '.././animations.css';
 
 .projectTitleContainer {
     padding: 0px;
@@ -58,7 +58,7 @@
     height: fit-content;
     padding: 0px;
     margin-right: 0px;
-    margin-bottom: 25px;
+    margin-bottom: 15px;
 }
 .projectInfo li {
     box-sizing: border-box;
