--- a/src/animations.css
+++ b/src/animations.css
@@ -81,12 +81,15 @@
 
 @keyframes loading {
     0% {
+      opacity: 0;
         left: -100%;  /* Comienza fuera de la pantalla a la izquierda */
     }
     50% {
+      opacity: 1;
         left: 50%;  /* Se mueve hacia el centro */
     }
     100% {
+      opacity: 0;
         left: 100%;  /* Se mueve completamente fuera de la pantalla a la derecha */
     }
 }
