--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,8 @@
     color: #FFFFFF;
     font-family: 'Lato', sans-serif;
     font-weight: 400;
+}html {
+    overflow-y: scroll;
 }
 
 /* Headings */
