--- a/src/components/project.module.css
+++ b/src/components/project.module.css
@@ -146,6 +146,30 @@
     letter-spacing: 1px;
     font-weight: 800;
 }
+/*---------------------------------ESQUELETO --------------------*/
+
+.skeleton {
+  width: 100%;
+  height: 200px; 
+  background: #eee;
+  border-radius: 4px;
+  animation: pulse 1.5s infinite;
+}
+
+@keyframes pulse {
+  0% {
+    background-color: #eee;
+  }
+  50% {
+    background-color: #ddd;
+  }
+  100% {
+    background-color: #eee;
+  }
+}
+
+
+
 @media (min-width: 768px) {
     
     .projectTitleContainer , .projectInfo  {
