--- a/src/components/project.module.css
+++ b/src/components/project.module.css
@@ -148,14 +148,17 @@
 }
 /*---------------------------------ESQUELETO --------------------*/
 
-.skeleton {
+.skeleton ,.caracteristicSkeleton{
+  margin-top: 15px;
   width: 100%;
   height: 200px; 
   background: #eee;
-  border-radius: 4px;
+  border-radius: 5px;
   animation: pulse 1.5s infinite;
 }
-
+.skeleton  {
+    height: 100%;
+}
 @keyframes pulse {
   0% {
     background-color: #eee;
